--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
         <!-- <center><h1>INCREMENT & BONUS</h1></center> -->
 
         <div class="employee-card">
-            <center><h1>INCREMENT & BONUS</h1></center>
+            <center><h1>ATS INCREMENT & BONUS</h1></center>
             <div class="employee-header">
                 <h2>Employee Details :</h2>
-                <span class="role">Senior Software Engineer</span>
+                <span class="role">Associate Devops Engineer</span>
             </div>
 
             <div class="employee-grid">
